--- a/style/style.css
+++ b/style/style.css
@@ -129,7 +129,7 @@ body {
 }
 #slider {
   width: 100%;
-  height: 1200px;
+  height: 1000px;
   background: url('../img/wallpaper1.png') no-repeat center top;
   -webkit-background-size: cover;
   background-size: cover;
@@ -137,16 +137,16 @@ body {
 }
 header {
   width: 100%;
-  height: 130px;
+  height: 100px;
   background-color: #000000;
-  position: fixed;
   border-bottom: solid white 1px;
   z-index: 500;
 }
 header #logo {
   float: left;
-  margin-left: 1%;
-  margin-top: 5px;
+  margin-left: 2%;
+  margin-top: 1%;
+  width: 200px;
 }
 header nav {
   width: 70%;
@@ -156,12 +156,12 @@ header nav {
 header nav li {
   display: inline-block;
   float: left;
-  padding-left: 10%;
+  padding-left: 5%;
   padding-top: 3%;
 }
 header nav li h1 {
   font-family: 'MuseoSans100';
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
   color: #ffffff;
   padding-top: 5px;
@@ -178,7 +178,7 @@ header nav li #login h1 {
   font-size: 1.3em;
   color: #ffffff;
   text-align: center;
-  padding-top: 5%;
+  padding-top: 4%;
 }
 #text h1 {
   font-family: 'FuturaCondensedBQRegular';
@@ -190,8 +190,8 @@ header nav li #login h1 {
   line-height: 90px;
 }
 #btnbot {
-  width: 15%;
-  height: 80px;
+  width: 20%;
+  height: 60px;
   background-color: #c84a4a;
   margin: 0 auto;
   -webkit-border-radius: 15px;
@@ -202,34 +202,36 @@ header nav li #login h1 {
 #btnbot h1 {
   text-align: center;
   font-family: 'DINRegular';
-  font-size: 1.4em;
+  font-size: 1.1em;
   color: white;
-  padding-top: 10%;
+  padding-top: 8%;
 }
 #search {
   width: 100%;
   height: 600px;
-  background-color: #000000;
+  background: url('../img/asfalt.png');
   border-bottom: solid white 1px;
   z-index: 1;
 }
 #search #insearch {
-  width: 70%;
-  height: 45px;
-  background-color: #818181;
+  width: 50%;
+  height: 30px;
+  background-color: #ffffff;
   border: none;
-  -webkit-border-radius: 25px 25px 25px 25px;
-  border-radius: 25px 25px 25px 25px;
-  color: #ffffff;
-  font-size: 2em;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
   margin-top: 5%;
+  color: #c84a4a;
+  margin-left: 20%;
+  padding-left: 20px;
+  margin-right: 5%;
 }
 #search .desc h1 {
   color: #C0C0C0;
   text-align: center;
   margin-top: 70px;
   font-family: 'MuseoSans100';
-  font-size: 2em;
+  font-size: 1.5em;
 }
 #search .containsearch {
   width: 100%;
@@ -239,7 +241,7 @@ header nav li #login h1 {
   font-family: 'MuseoSans100';
 }
 #search .containsearch h1 {
-  font-size: 2em;
+  font-size: 1.2em;
   margin-left: 20px;
   color: #C0C0C0;
 }
@@ -247,7 +249,7 @@ header nav li #login h1 {
   color: #818181;
   margin-left: 20px;
   margin-top: 20px;
-  font-size: 1.3em;
+  font-size: 1em;
 }
 #videos {
   width: 100%;
@@ -265,8 +267,8 @@ header nav li #login h1 {
   font-family: 'MuseoSans100';
   color: white;
   text-align: center;
-  padding-top: 50px;
-  font-size: 3em;
+  padding-top: 65px;
+  font-size: 2em;
 }
 #videos .containvid {
   margin-top: 90px;
@@ -283,8 +285,8 @@ header nav li #login h1 {
 }
 #popularvid {
   width: 100%;
-  height: 700px;
-  background-color: #000000;
+  height: 900px;
+  background: url('../img/asfalt.png');
   border-bottom: solid white 1px;
 }
 #popularvid #trait {
@@ -297,11 +299,67 @@ header nav li #login h1 {
   font-family: 'MuseoSans100';
   color: white;
   text-align: center;
-  padding-top: 50px;
-  font-size: 3em;
+  padding-top: 65px;
+  font-size: 2em;
 }
-#popularvid #imgallcat {
+#popularvid .containvid {
+  margin-top: 90px;
+}
+#popularvid .containvid h1 {
+  color: #C0C0C0;
+  font-family: 'MuseoSans100';
+  font-size: 1.2em;
+  margin-top: 10px;
+}
+#popularvid .containvid h2 {
+  font-family: 'MuseoSans100';
+  margin-top: 10px;
+}
+#othercategories {
+  width: 100%;
+  height: 700px;
+  background-color: #000000;
+  border-bottom: solid white 1px;
+}
+#othercategories #trait {
+  width: 100%;
+  height: 100%;
+  border-bottom: solid white 1px;
+  padding-top: 80px;
+}
+#othercategories #containtitre h1 {
+  font-family: 'MuseoSans100';
+  color: white;
+  text-align: center;
+  padding-top: 65px;
+  font-size: 2em;
+}
+#othercategories #imgallcat {
   padding-top: 100px;
+}
+#phrases {
+  width: 100%;
+  height: 600px;
+  background: url('../img/asfalt.png');
+  border-bottom: solid white 1px;
+}
+#phrases .textphrases {
+  width: 85%;
+  height: 150px;
+  margin-top: 13%;
+}
+#phrases .textphrases h1 {
+  font-size: 2em;
+  color: white;
+  font-family: 'ChaparralProRegular';
+  letter-spacing: 3px;
+}
+#phrases .textphrases p {
+  font-size: 1.2em;
+  line-height: 30px;
+  color: white;
+  padding-top: 20px;
+  font-family: 'ChaparralProRegular';
 }
 #faith {
   width: 100%;
@@ -319,8 +377,8 @@ header nav li #login h1 {
   font-family: 'MuseoSans100';
   color: white;
   text-align: center;
-  padding-top: 50px;
-  font-size: 3em;
+  padding-top: 65px;
+  font-size: 2em;
 }
 #faith .padd {
   margin-top: 100px;
@@ -332,16 +390,17 @@ header nav li #login h1 {
 }
 #faith .padd .containnom {
   width: 92.5%;
-  height: 12%;
+  height: 18%;
   position: absolute;
-  background-color: #897E76;
-  margin-top: 58%;
+  background-color: #c84a4a;
+  margin-top: 53%;
 }
 #faith .padd .containnom h1 {
   text-align: center;
   font-family: 'MuseoSans100';
   color: white;
   font-size: 1.5em;
+  margin-top: 2%;
 }
 footer {
   width: 100%;
