--- a/style/style.less
+++ b/style/style.less
@@ -183,6 +183,16 @@ header{
 							font-size: 1em;
 						}
 				}
+					#browsecat{
+						float:right;
+						margin-top: 5%;
+						margin-right: 18%;
+							h1{
+								color:#c84a4a;
+								text-decoration: underline;
+								font-size: 1.2em;
+							}
+					}
 }
 
 #videos{
@@ -218,6 +228,19 @@ header{
 								margin-top: 10px;
 							}
 				}
+					.allvideos{
+						border: solid #c84a4a 2px;
+						width: 13%;
+						height: 2.9%;
+						float: right;
+						margin-right: 8%;
+						margin-top: 1%;
+							h1{
+								text-align: center;
+								padding-top: 2%;
+								color: #c84a4a;
+							}
+					}
 }
 
 #popularvid{
@@ -253,6 +276,20 @@ header{
 								margin-top: 10px;
 							}
 				}
+
+					.allvideos{
+							border: solid #c84a4a 2px;
+							width: 13%;
+							height: 2.9%;
+							float: right;
+							margin-right: 8%;
+							margin-top: 1%;
+								h1{
+									text-align: center;
+									padding-top: 2%;
+									color: #c84a4a;
+								}
+						}
 }
 
 #othercategories{
