--- a/style/style.css
+++ b/style/style.css
@@ -251,6 +251,16 @@ header nav li #login h1 {
   margin-top: 20px;
   font-size: 1em;
 }
+#search #browsecat {
+  float: right;
+  margin-top: 5%;
+  margin-right: 18%;
+}
+#search #browsecat h1 {
+  color: #c84a4a;
+  text-decoration: underline;
+  font-size: 1.2em;
+}
 #videos {
   width: 100%;
   height: 900px;
@@ -283,6 +293,19 @@ header nav li #login h1 {
   font-family: 'MuseoSans100';
   margin-top: 10px;
 }
+#videos .allvideos {
+  border: solid #c84a4a 2px;
+  width: 13%;
+  height: 2.9%;
+  float: right;
+  margin-right: 8%;
+  margin-top: 1%;
+}
+#videos .allvideos h1 {
+  text-align: center;
+  padding-top: 2%;
+  color: #c84a4a;
+}
 #popularvid {
   width: 100%;
   height: 900px;
@@ -314,6 +337,19 @@ header nav li #login h1 {
 #popularvid .containvid h2 {
   font-family: 'MuseoSans100';
   margin-top: 10px;
+}
+#popularvid .allvideos {
+  border: solid #c84a4a 2px;
+  width: 13%;
+  height: 2.9%;
+  float: right;
+  margin-right: 8%;
+  margin-top: 1%;
+}
+#popularvid .allvideos h1 {
+  text-align: center;
+  padding-top: 2%;
+  color: #c84a4a;
 }
 #othercategories {
   width: 100%;
