accueil et video

--- a/style/style.less
+++ b/style/style.less
@@ -69,7 +69,7 @@ header{
 		#logo{
 			float: left;
 			margin-left: 2%;
-			margin-top: 1%;
+			margin-top: 15px;
 			width: 200px;
 		}
 		nav{
@@ -79,8 +79,8 @@ header{
 				li{
 					display: inline-block;
 					float: left;
-					padding-left: 5%;
-					padding-top: 3%;
+					padding-left: 50px;
+					padding-top: 30px;
 					h1{
 						font-family: 'MuseoSans100';
 						font-size: 1.5em;
@@ -94,13 +94,14 @@ header{
 							height: 40px;
 							background-color: #c84a4a;
 							border: solid black 1px;
-							margin-left: 25%;
+							margin-left: 60px;
+							margin-top: -3px;
 								h1{
 									font-family: 'ChaparralProRegular';
 									font-size: 1.3em;
 									color:@couleurpolicemenu;
 									text-align: center;
-									padding-top: 4%;
+									padding-top: 10px;
 								}
 						}	
 				}		
@@ -118,7 +119,7 @@ header{
 	padding-top: 300px;
 	letter-spacing: 10px;
 	line-height: 90px;
-}
+	}
 }
 
 #btnbot{
@@ -133,7 +134,7 @@ header{
 		h1{
 			text-align: center;
 			font-family: 'DINRegular';
-			font-size: 1.1em;
+			font-size: 17px;
 			color: white;
 			padding-top: 8%;
 	}
@@ -183,16 +184,6 @@ header{
 							font-size: 1em;
 						}
 				}
-					#browsecat{
-						float:right;
-						margin-top: 5%;
-						margin-right: 18%;
-							h1{
-								color:#c84a4a;
-								text-decoration: underline;
-								font-size: 1.2em;
-							}
-					}
 }
 
 #videos{
@@ -228,19 +219,6 @@ header{
 								margin-top: 10px;
 							}
 				}
-					.allvideos{
-						border: solid #c84a4a 2px;
-						width: 13%;
-						height: 2.9%;
-						float: right;
-						margin-right: 8%;
-						margin-top: 1%;
-							h1{
-								text-align: center;
-								padding-top: 2%;
-								color: #c84a4a;
-							}
-					}
 }
 
 #popularvid{
@@ -276,20 +254,6 @@ header{
 								margin-top: 10px;
 							}
 				}
-
-					.allvideos{
-							border: solid #c84a4a 2px;
-							width: 13%;
-							height: 2.9%;
-							float: right;
-							margin-right: 8%;
-							margin-top: 1%;
-								h1{
-									text-align: center;
-									padding-top: 2%;
-									color: #c84a4a;
-								}
-						}
 }
 
 #othercategories{
@@ -337,7 +301,7 @@ header{
 					line-height: 30px;
 					color:white;
 					padding-top: 20px;
-					font-family: 'ChaparralProRegular';
+					font-family: 'MuseoSans100';
 				}
 		}
 }
