--- a/style/style2.less
+++ b/style/style2.less
@@ -13,9 +13,13 @@ li{
 	  	background: url(../images/wallpaper.png) no-repeat center fixed;
 	  	-webkit-background-size: cover;
 	  	background-size: cover;
+		overflow-x: hidden;
+		}
 
-
-	  }
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
 	  div.container{
 
