--- a/style/style2.less
+++ b/style/style2.less
@@ -10,12 +10,16 @@ li{
 
 	  body{
 	  	width: 100%;
-	  	background: url(../images/wallpaper.png) no-repeat center fixed;
+	  	background: url(../img/wallpaper.png) no-repeat center fixed;
 	  	-webkit-background-size: cover;
 	  	background-size: cover;
+		overflow-x: hidden;
+		}
 
-
-	  }
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
 	  div.container{
 
@@ -60,7 +64,7 @@ li{
 	  	a.btn{
 
 	  		font-size: 23px;
-	  		color: black;
+	  		color: white;
 	  		margin-top: 75px;
 	  		width: 345px;
 	  		height: 60px;	  		
